WIP adding more creation logic, cleanup required after seein what will remain
Signed-off-by: Atanas Atanasov <a.v.atanasov98@gmail.com>